Simplify footer and fix small spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ img {
     border-radius: 10px;
     width: 100%;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-    min-height: 200px;
+    min-height: 150px;
 }
 
 /*------ MENU BAR ------*/
@@ -139,10 +139,6 @@ a.nav-link {
 
 /*------ JOURNEY SECTION ------*/
 
-.journey-section {
-    margin: 50px 0;
-}
-
 .journey-heading-bg {
     background: linear-gradient(0.25turn, rgb(235, 72, 227), rgb(255, 63, 63));
     height: 20%;
@@ -155,12 +151,9 @@ a.nav-link {
     background: #FFAC2F;
     border: 0;
     border-radius: 5px;
-    height: 50px;
-    width: 60%;
-    margin: 20px auto;
-    padding: 0 5%;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    width: 140px;
     color: white;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 }
 
 /*------ TECHNOLOGY ------*/
